Solved overflow bug

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -55,9 +55,9 @@ nav .container {
     font-weight: 600;
 }
 
-.main {
+/* .main {
     transition: background 2s ease-in-out;
-}
+} */
 
 .main .registrations {
     padding: 5px;
